[tool.poetry]
name = "blockstone"
version = "0.1.0"
description = "Blockstone Capital’s overarching objective is to make the nascent crypto asset class investable by aligning it with institutional-grade standards to provide qualified investors with superior risk-adjusted returns over the long-term."
authors = ["ActurialCapital"]
license = "Apache License"
readme = "README.md"
packages = [ {include = "blockstone"} ]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
